--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_pack_tag "select-category", "view-selected-image" %>
+
 <div class="wrapper">
   <div class="side_bar">
     <%= render partial: "shared/side_bar" %>
