--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -303,6 +303,7 @@
   right: 2px;
   border: none;
   background-color: #fff;
+  color: #000;
 }
 
 .topic_input {
@@ -313,6 +314,7 @@
   font-size: 12px;
   border: none;
   background-color: #f5f5f5;
+  color: #000;
   border-radius: 3px;
 }
 
@@ -364,7 +366,209 @@
 }
 
 
-/* キャラクター登録ページ */
+/* 新規データ登録ページ */
+
+.edit_character_form {
+  display: flex;
+}
+
+.edit_profile_form {
+  width: 665px;
+  height: 540px;
+  border: 1px solid #770099;
+  background-color: #fff;
+  border-radius: 3px;
+  display: flex;
+  flex-shrink: 0;
+}
+
+.edit_profile_form_left {
+  width: 222px;
+  padding-top: 22px;
+  text-align: center;
+  position: relative;
+  flex-shrink: 0;
+}
+
+.edit_profile_form_left::after {
+  content: "";
+  border-right: 1px solid #770099;
+  height: 495px;
+  position: absolute;
+  right: 0;
+  top: 22px;
+}
+
+#selected_character_image {
+  width: 145px;
+  height: 145px;
+  border-radius: 50%;
+  border: 1px solid #f8e8ff;
+}
+
+#edit_character_image {
+  display: none;
+}
+
+.character_name_field {
+  margin-top: 2px;
+  color: #770099;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.character_name_field p {
+  text-align: left;
+  margin-left: 30px;
+}
+
+.character_name_field span {
+  font-size: 16px;
+  margin-left: 3px;
+}
+
+.edit_character_name {
+  margin-top: 5px;
+  padding: 5px;
+  width: 160px;
+  border: none;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.character_submit_btn {
+  margin-top: 200px;
+  padding: 5px 13px;
+  font-size: 18px;
+  background-color: #fff;
+  color: #770099;
+  border: 1px solid #770099;
+  border-radius: 20px;
+  display: inline-block;
+}
+
+.edit_profile_form_right {
+  padding: 22px 30px 22px 20px;
+  width: 100%;
+  color: #770099;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+.character_category_field {
+  padding-bottom: 10px;
+  position: relative;
+  width: 100%;
+}
+
+.character_category_field::after,
+.character_sns_field::after {
+  content: "";
+  border: .5px dashed #770099;
+  width: 390px;
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+}
+
+.affiliation_category {
+  margin-top: 10px;
+  height: 50px;
+  width: 100%;
+}
+
+#category_list_open_btn {
+  margin-top: 10px;
+  padding: 3px 12px;
+  font-size: 12px;
+  background-color: #fff;
+  color: #770099;
+  border: 1px solid #770099;
+  border-radius: 20px;
+  display: inline-block;
+}
+
+.character_sns_field {
+  padding: 10px 0;
+  position: relative;
+}
+
+.edit_character_sns {
+  margin-top: 20px;
+  padding: 5px;
+  width: 100%;
+  border: none;
+  background-color: #f5f5f5;
+  border-radius: 3px;
+}
+
+.character_description_field {
+  padding-top: 10px;
+}
+
+.edit_character_description {
+  margin-top: 10px;
+  width: 100%;
+  height: 230px;
+  padding: 5px;
+  border: none;
+  background-color: #f5f5f5;
+  border-radius: 3px;
+  resize: none;
+}
+
+.new_character_topic_form {
+  width: 355px;
+  height: 540px;
+  margin-left: 15px;
+  padding: 15px 15px;
+  flex-shrink: 0;
+  border: 1px solid #770099;
+  border-radius: 3px;
+  background-color: #fff;
+  color: #770099;
+  font-size: 22px;
+  font-weight: bold;
+}
+
+.edit_character_future_topic {
+  margin-top: 12px;
+  padding-bottom: 38px;
+  position: relative;
+}
+
+.edit_character_topic_type {
+  position: absolute;
+  font-size: 14px;
+  top: -28px;
+  right: 8px;
+}
+
+.edit_character_topic {
+  height: 153.5px;
+}
+
+.edit_character_future_topic::after {
+  content: "";
+  border: .5px solid #770099;
+  width: 310px;
+  position: absolute;
+  bottom: -1px;
+  left: 5px;
+}
+
+#past_topics {
+  margin-top: 38px;
+  position: relative;
+}
+
+
+
+
+/* カテゴリボックス */
 .category_select_box {
   width: 300px;
   border: 1px solid #4A154B;
@@ -385,7 +589,7 @@
 
 /* キャラクター編集ページ */
 
-.edit_character {
+/* .edit_character {
   width: 1100px;
   border: 2px solid #4A154B;
   border-radius: 10px;
@@ -416,7 +620,7 @@
 
 .edit_past_topic {
   padding: 30px;
-}
+} */
 
 /* カテゴリ編集ページ */
 
