新規データ登録ページ修正

--- a/app/views/characters/_main_view_character_new.html.erb
+++ b/app/views/characters/_main_view_character_new.html.erb
@@ -1,7 +1,7 @@
 <div class="main_top">
   <div class="main_top_data">
     <div class="top_title">
-      データ登録
+      新規データ登録
     </div>
     <div class="top_subtitle">
       データと話題を入力し、新規登録して下さい。
