--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -634,7 +634,7 @@
 .category_input {
   border: none;
   background-color: #600077;
-  /* border-bottom: 1px solid #fff; */
+  border-bottom: 1px solid #a62ec7;
   color: #fff;
   width: 500px;
 }
@@ -718,4 +718,17 @@
 .character_input_text {
   margin-left: 20px;
   font-weight: bold;
+}
+
+/* カテゴリ編集ページ */
+
+.category_operation_btn {
+  padding: 5px 13px;
+  margin-right: 10px;
+  font-size: 16px;
+  background-color: #fff;
+  color: #770099;
+  border: 1px solid #770099;
+  border-radius: 20px;
+  display: inline-block;
 }
