--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,20 @@
-<div class='account-page' id='account-page'>
-  <div class='account-page__inner clearfix'>
-    <div class='account-page__inner--left account-page__header'>
-      <h2>Create Account</h2>
-      <h5>新規アカウントの作成</h5>
+<div class="user_contents_wrapper">
+  <div class="user_contents">
+    <div class="signin_logo">
+      <%= image_tag "main_logo.png" %><%# 大きいロゴを用意 %>
     </div>
-    <div class='account-page__inner--right user-form'>
-      <%= form_with model: resource, as: resource_name, url: registration_path(resource_name), local: true do |f|%>
-        <%= render "devise/shared/error_messages", resource: resource %>
-        <div class='field'>
-          <div class='field-label'>
-            <%= f.label :name%>
-          </div>
-          <div class='field-input'>
-            <%= f.text_field :name, autofocus: true%>
-          </div>
-        </div>
-        <div class='field'>
-          <div class='field-label'>
-            <%= f.label :email%>
-          </div>
-          <div class='field-input'>
-            <%= f.email_field :email%>
-          </div>
-        </div>
-        <div class='field'>
-          <div class='field-label'>
-            <%= f.label :password%>
-            <i>(英数字6文字以上)</i>
-          </div>
-          <div class='field-input'>
-            <%= f.password_field :password, autocomplete: "off"%>
-          </div>
-        </div>
-        <div class='field'>
-          <div class='field-label'>
-            <%= f.label :password_confirmation%>
-          </div>
-          <div class='field-input'>
-            <%= f.password_field :password_confirmation, autocomplete: "off"%>
-          </div>
-        </div>
-        <div class='actions'>
-          <%= f.submit "Create Account", class: 'btn'%>
-        </div>
+    <h2 class="user_page_title">新規アカウント</h2>
+    <div class="signin_field">
+      <%= form_with model: resource, as: resource_name, url: session_path(resource_name), class: "login_form", local: true do |f|%>
+        <%= f.text_field :name, autofocus: true, class: "login_input", placeholder: "Name" %>
+        <%= f.email_field :email, class: "login_input", placeholder: "Email" %>
+        <%= f.password_field :password, autocomplete: "off", class: "login_input", placeholder: "Password" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "login_input", placeholder: "Password confirmation" %>
+        <%= f.submit "登録", class: 'signin_btn'%>
+      <% end %>
+      <div class="login_link">
+        <%= link_to "ログイン", new_user_session_path %>
       </div>
-    <% end %>
+    </div>
   </div>
 </div>
