--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -485,6 +485,20 @@
   width: 100%;
 }
 
+.selected_category {
+  margin: 0 3px 6px 0;
+  padding: 3px 12px;
+  font-size: 12px;
+  background-color: #770099;
+  color: #fff;
+  border-radius: 20px;
+  display: inline-block;
+}
+
+.selected_category:hover {
+  background-color: #600077;
+} 
+
 #category_list_open_btn {
   margin-top: 10px;
   padding: 3px 12px;
@@ -494,6 +508,7 @@
   border: 1px solid #770099;
   border-radius: 20px;
   display: inline-block;
+  position: relative;
 }
 
 .character_sns_field {
@@ -572,13 +587,17 @@
 
 /* カテゴリボックス */
 .category_select_box {
-  width: 300px;
-  border: 1px solid #4A154B;
+  width: 390px;
   padding: 15px;
-  border-radius: 5px;
+  border: 1px solid #4A154B;
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: 2px 2px 7px rgb(125, 125, 125);
   display: none;
   position: absolute;
-  background-color: #fff;
+  top: 120px;
+  left: 0;
+  z-index: 1;
 }
 
 .visible {
@@ -587,6 +606,31 @@
 
 .check_btn {
   display: inline-block;
+  margin: 0 3px 6px 0;
+}
+
+.category_checkbox {
+  display: none;
+}
+
+.category_checkbox:checked + label {
+  background-color: #770099;
+  color: #fff;
+}
+
+.category_check_btn {
+  padding: 3px 12px;
+  font-size: 12px;
+  background-color: #fff;
+  color: #770099;
+  border: 1px solid #770099;
+  border-radius: 20px;
+  display: block;
+}
+
+.category_checked {
+  background-color: #770099;
+  color: #fff;
 }
 
 /* 詳細データ編集ページ */
