--- a/app/assets/stylesheets/characters.css
+++ b/app/assets/stylesheets/characters.css
@@ -100,7 +100,7 @@
 
 .main_top {
   height: 90px;
-  padding: 0 35px;
+  padding: 0 25px  0 35px;
   background-color: #770099;
   display: flex;
   justify-content: space-between;
@@ -126,8 +126,18 @@
 }
 
 .main_top_user_data {
+  margin-top: 15px;
+  height: 60px;
+  padding: 10px;
   display: flex;
   align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+
+.main_top_user_data:hover {
+  background-color: #600077;
+  border-radius: 3px;
 }
 
 .current_user_name {
@@ -141,6 +151,50 @@
   border-radius: 50%;
   border: 1px solid #f8e8ff;
   background-color: #fff;
+}
+
+/* ユーザー操作ボックス */
+
+.user_operation {
+  width: 200px;
+  background-color: #770099;
+  border: 1px solid #fff;
+  border-radius: 3px;
+  text-align: center;
+  box-shadow: 0px 0px 7px #888;
+  position: absolute;
+  z-index: 1;
+  top: 65px;
+  right: 0;
+  display: none;
+}
+
+.user_operation_btn {
+  padding: 10px 0;
+  display: block;
+  color: #fff;
+}
+
+.user_operation_btn:hover {
+  background-color: #600077;
+}
+
+.user_edit_btn {
+  padding-bottom: 15px;
+  position: relative;
+}
+
+.user_edit_btn::after {
+  content: "";
+  border: .5px dashed #fff;
+  width: 166px;
+  position: absolute;
+  top: 0px;
+  left: 15px;
+}
+
+.user_operation_active {
+  display: block;
 }
 
 /* メイントップサブ */
