JS読み込み処理追加

--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag "select-category", "view-selected-image" %>
+<%= javascript_pack_tag "select-category", "view-selected-image", "open-operation-btn" %>
 
 <div class="wrapper">
   <div class="side_bar">
