--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,3 +1,6 @@
+<%= javascript_pack_tag "open-operation-btn" %>
+
+
 <div class="wrapper">
   <div class="side_bar">
     <%= render partial: "shared/side_bar" %>
