--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag "delete-topic", "editpage-new-topic", "select-category", "view-selected-image" %>
+<%= javascript_pack_tag "delete-topic", "editpage-new-topic", "select-category", "view-selected-image", "open-operation-btn" %>
 
 <div class="wrapper">
   <div class="side_bar">
